# advent-of-code

./: .gitignore  pyproject.toml
2023/python/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  utils.py
python/: pyproject.toml
python/aoc/: utils.py
python/aoc/2023/: day01.py  day02.py  day04.py  day05.py  day07.py  day08.py  day10.py  day11.py
python/aoc/y2023/: day03.py  day06.py  day09.py  day10.py  day11.py  day12.py
