[project]
name = "aoc"
version = "2023.0.0"
dependencies = ["more_itertools", "mypy", "pytest", "ruff"]


[tool.ruff]

line-length = 99
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101",
    "ANN102",
    "D",
    "EM101",
    "EM102",
    "T201",
    "TRY003",
    "S101",
    "PLR2004",
    "PT009",
]
fixable = ["ALL"]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
python_files = "*.py"
addopts = "-vvv"
